--- a/contacto.css
+++ b/contacto.css
@@ -1,7 +1,7 @@
 body{
     background-color: #f69714 ;
 }
-#logo{
+#logo2{
     max-width: 350px;
     width: auto;
     max-height: 150px;
@@ -9,4 +9,5 @@ body{
 }
 svg{
     color: white;
+    
 }
