--- a/frios.css
+++ b/frios.css
@@ -10,3 +10,13 @@
 svg{
     color: white;
 }
+#container1{
+    background-color: #f69714 ;
+}
+
+#comida{
+    height: 100%;
+    width: 100%;
+    max-height: 250px;
+}
+
